--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iggirl",
+  "name": "ivodeli",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JasonAnger/iggirl.git"
+    "url": "git+https://github.com/JasonAnger/ivodeli.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JasonAnger/iggirl/issues"
+    "url": "https://github.com/JasonAnger/ivodeli/issues"
   },
-  "homepage": "https://github.com/JasonAnger/iggirl#readme",
+  "homepage": "https://github.com/JasonAnger/ivodeli#readme",
   "description": "",
   "dependencies": {
     "body-parser": "^1.19.0",
